package com.example.eventsourcing.dto;

public enum OrderStatus {
    PLACED,
    ADJUSTED,
    ACCEPTED,
    COMPLETED,
    CANCELLED
}
