@startuml

scale max 1024 width
scale max 800 height

set separator none

package jakarta.persistence {

  annotation Entity
  annotation Embeddable
}

package org.springframework.data.domain {

  interface Persistable {
    getId(): Object
  	isNew(): boolean
  }
}

package com.example.eventsourcing {

  package com.example.eventsourcing.projection {

    class OrderProjection {
      -id: UUID
      -version: int
      -status: OrderStatus
      -riderId: UUID
      -price: BigDecimal
      -route: List<WaypointProjection>
      -driverId: UUID
      -placedDate: Instant
      -acceptedDate: Instant
      -completedDate: Instant
      -cancelledDate: Instant
    }

    class WaypointProjection {
      -address: String
      -latitude: double
      -longitude: double
    }
  }

  package com.example.eventsourcing.dto {

    class OrderDto {
      orderId: UUID
      eventType: String
      eventTimestamp: long
      version: int
      status: OrderStatus
      riderId: UUID
      price: BigDecimal
      route: List<WaypointDto>
      driverId: UUID
    }

    class WaypointDto {
      address: String
      latitude: double
      longitude: double
    }

    enum OrderStatus {
      PLACED
      ADJUSTED
      ACCEPTED
      COMPLETED
      CANCELLED
    }
  }
}

Persistable <|.. OrderProjection
OrderProjection *-- WaypointProjection
OrderProjection o-- OrderStatus
OrderProjection ..> Entity
WaypointProjection ..> Embeddable

OrderDto o-- WaypointDto
OrderDto o-- OrderStatus

@enduml
